# agent-connect

./: LICENSE  README.md  install.sh  install.test.sh  pyproject.toml  run-agent.sh  test_codex_adapter.py  test_version_single_source.py  test_worker_parse.py  test_worker_preamble.py  test_worker_repo.py
.github/workflows/: release.yml
agent_connect/: __init__.py  worker.py
agent_connect/adapters/: __init__.py  cline.py  codex.py  kilo.py  ollama.py  omnigent.py
examples/: config.env.example
